crates/storage-macros/tests/compile_fail/collection.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/collection.rs:38:30
   |
38 |         let _: Vec<Parent> = interface.children_of(&parent.group).unwrap();
   |                -----------   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Vec<Parent>`, found `Vec<Child>`
   |                |
   |                expected due to this
   |
   = note: expected struct `Vec<Parent>`
              found struct `Vec<Child>`
